2011-02-25 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actorio.cc, actors.cc, party.cc: Force party members and Avatar
		alignment to friendly.
	* combat.cc: Simplify find_opponents due to the above change. Fix
		regression in 6548 that caused party members to attack
		unconscious npcs.
	* actors.cc: Avatar can be charmed again in normal charmed
		difficulty but effective alignment doesn't change.
		(behaves like the original)

2011-02-09 Dominik Reichardt <dominus@users.sourceforge.net>
	* macosx/diskback.png: added a background image for the OS X snapshot disk image
	* macosx/DS_Store: above backgrund added and a new layout of the snapshot disk image
	* Makefile.am: some disk image tweaking
	
2011-02-08 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamewin.*, schedule.cc, shapes/items.h: Add unused npc messages.
		Fix wrong message number for SI alt intro.
	* data/exultmsg.txt: Fix typo in alt SI intro

2011-02-07 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.*: Don't have eat schedule use messages or add more
		than one piece of food since the original doesn't and remove
		unused create plate stuff. Add check to stop possible crash.

2011-02-06 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc, combat.cc, shapes/items.h: Fix starving message.
		Add some message constants.

2011-02-06 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc, combat.cc: Make sure non-party members equip a shield
		if they have one and aren't using a two handed weapon.

2011-02-06 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc: Fix ready_best_weapon not equipping dragon breath
		and some spells because they are backpack or rhand ready type.
		Added more shield equipping checks.

2011-02-04 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.cc: Don't have shape 846 (naga) use different dancing
		frames unless the game is SI.